--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="form">
-	<form method="post" action="{{ url_for('success_request') }}">
+	<form method="post" action="{{ url_for('hello') }}">
 		<p><label><strong>Введите ваше имя: </strong><input type="text" name="user_name" size="30" maxlength="30" placeholder="Иван Петров" required /></label></p>
 		<p>Cгенерировать случайное число из диапазона:</p>
 		<p><label><strong>от: </strong><input type="number" name="number_start" value="1" required /></label>
