--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
 		<p><label><input type="checkbox" name="value_one" />Найти произведение чисел, взятых по абсолютной величине.</label><br>
 		<label><input type="checkbox" name="value_two" />Найти минимальное число среди чисел, взятых по абсолютной величине.</label><br>
 		<label><input type="checkbox" name="value_three" />Выполнить сортировку чисел, взятых по абсолютной величине.</label><br></p>
-        <p><button>Показать результаты</button></p>
-		<input type="reset" value="Очистить форму" /></p>
+        	<input type="submit" value="Показать результаты" />
+		<input type="reset" value="Очистить форму" />
     </form>
 	</div>
 </body>
