--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 				<p><label><input type="checkbox" name="remove_repeats" checked />Исключить повторы*</label><br>
 				<p>Выберите необходимые действия*:</p>
 				<p><label><input type="checkbox" name="get_product" />Найти произведение чисел, взятых по абсолютной величине.</label><br>
-				<label><input type="checkbox" name="get_abs_max_and_min" />Найти максимальное и минимальное число среди чисел, взятых по абсолютной величине.</label><br>
+				<label><input type="checkbox" name="get_abs_max_and_min" />Найти минимальное и макимальное значение среди чисел, взятых по абсолютной величине.</label><br>
 				<label><input type="checkbox" name="get_sorted_numbers" />Выполнить сортировку чисел, взятых по абсолютной величине.</label><br></p>
 				<input type="submit" value="Показать результаты" />
 				<input type="reset" value="Очистить форму" />
