Change HTML skeleton document.

--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,7 @@
 	<head>
 		{% block head %}
 		<meta charset='utf-8'>
-		<title>{% block title %}{% endblock %} Обработанные данные</title>
+		<title>{% block title %}{% endblock %} Результат</title>
 		<link rel="stylesheet" href="../static/style/style_form.css">
 		<link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
 		{% endblock %}
