--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,11 @@
 				<p><label><strong>от: </strong><input type="number" name="number_start" value="1" min="-99999" max="99999" required /></label>
 				<label><strong>до: </strong><input type="number" name="number_finish" value="99" min="-99999" max="99999" required /></label>
 				<label><strong>кол-во: </strong><input type="number" name="number_quantity" min="1" value="1" required /></label></p>
-				<p><label><input type="checkbox" name="remove_repeats" checked />Исключить повторы*</label><br>
+				<p><label><input type="checkbox" name="remove_repeats" checked />Исключить повторы*</label></p>
 				<p>Выберите необходимые действия*:</p>
 				<p><label><input type="checkbox" name="get_product" />Найти произведение чисел, взятых по абсолютной величине.</label><br>
 				<label><input type="checkbox" name="get_abs_max_and_min" />Найти минимальное и макимальное значение среди чисел, взятых по абсолютной величине.</label><br>
-				<label><input type="checkbox" name="get_sorted_numbers" />Выполнить сортировку чисел, взятых по абсолютной величине.</label><br></p>
+				<label><input type="checkbox" name="get_sorted_numbers" />Выполнить сортировку чисел, взятых по абсолютной величине.</label></p>
 				<input type="submit" value="Показать результаты" />
 				<input type="reset" value="Очистить форму" />
 				<p id="faq">*Необязательные параметры</p>
